# Balancing-robot

./: .gitignore  README.md  RTIMULib.ini  readme.md  try  try.cpp
install/: local_setup.sh  setup.sh
install/control_pkg/lib/control_pkg/: motor_controller_node
install/control_pkg/share/ament_index/resource_index/package_run_dependencies/: control_pkg
install/control_pkg/share/ament_index/resource_index/parent_prefix_path/: control_pkg
install/control_pkg/share/control_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/control_pkg/share/control_pkg/cmake/: control_pkgConfig-version.cmake  control_pkgConfig.cmake
install/control_pkg/share/control_pkg/environment/: ament_prefix_path.dsv  path.dsv
install/sensors_pkg/include/sensors_pkg/sensors_pkg/msg/: encoder_data.h  encoder_data.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/sensors_pkg/include/sensors_pkg/sensors_pkg/msg/detail/: encoder_data__builder.hpp  encoder_data__functions.h  encoder_data__rosidl_typesupport_fastrtps_c.h  encoder_data__rosidl_typesupport_fastrtps_cpp.hpp  encoder_data__rosidl_typesupport_introspection_c.h  encoder_data__rosidl_typesupport_introspection_cpp.hpp  encoder_data__struct.h  encoder_data__struct.hpp  encoder_data__traits.hpp  encoder_data__type_support.h  encoder_data__type_support.hpp
install/sensors_pkg/lib/sensors_pkg/: encoder_node  imu_node
install/sensors_pkg/local/lib/python3.10/dist-packages/sensors_pkg/: __init__.py  _sensors_pkg_s.ep.rosidl_typesupport_c.c  _sensors_pkg_s.ep.rosidl_typesupport_fastrtps_c.c  _sensors_pkg_s.ep.rosidl_typesupport_introspection_c.c
install/sensors_pkg/local/lib/python3.10/dist-packages/sensors_pkg-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/sensors_pkg/local/lib/python3.10/dist-packages/sensors_pkg/msg/: __init__.py  _encoder_data.py  _encoder_data_s.c
install/sensors_pkg/share/ament_index/resource_index/package_run_dependencies/: sensors_pkg
install/sensors_pkg/share/ament_index/resource_index/parent_prefix_path/: sensors_pkg
install/sensors_pkg/share/ament_index/resource_index/rosidl_interfaces/: sensors_pkg
install/sensors_pkg/share/sensors_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
install/sensors_pkg/share/sensors_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_sensors_pkg__rosidl_generator_cppExport.cmake  export_sensors_pkg__rosidl_generator_pyExport.cmake  export_sensors_pkg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_sensors_pkg__rosidl_typesupport_fastrtps_cExport.cmake  export_sensors_pkg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_sensors_pkg__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  sensors_pkgConfig-version.cmake  sensors_pkgConfig.cmake  sensors_pkg__rosidl_typesupport_cExport.cmake  sensors_pkg__rosidl_typesupport_cppExport.cmake  sensors_pkg__rosidl_typesupport_introspection_cExport-noconfig.cmake  sensors_pkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/sensors_pkg/share/sensors_pkg/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/sensors_pkg/share/sensors_pkg/msg/: EncoderData.idl  EncoderData.msg
log/: latest_build
src/: RTIMULib.ini  restart.sh  run_encoder_exc.sh
src/bluetooth_pkg/: package.xml  setup.cfg  setup.py
src/bluetooth_pkg/bluetooth_pkg/: bluetooth_node.py
src/control_pkg/: CMakeLists.txt  package.xml
src/control_pkg/src/: motor_controller_node.cpp
src/install/: local_setup.sh  setup.sh
src/install/control_pkg/lib/control_pkg/: motor_controller_node
src/install/control_pkg/share/control_pkg/: local_setup.sh  package.sh
src/install/imu_package/share/imu_package/: package.bash  package.dsv  package.ps1  package.sh
src/install/sensors_pkg/lib/sensors_pkg/: encoder_node  imu_node
src/install/sensors_pkg/share/sensors_pkg/: package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/robot_bringup/launch/: robot_launch.py
src/sensors_pkg/: CMakeLists.txt  package.xml
src/sensors_pkg/install/: local_setup.sh  setup.sh
src/sensors_pkg/install/imu_package/lib/imu_package/: imu_node
src/sensors_pkg/install/imu_package/share/imu_package/: local_setup.sh  package.sh  package.zsh
src/sensors_pkg/log/: latest_build
src/sensors_pkg/msg/: EncoderData.msg  IMUData.msg
src/sensors_pkg/src/: encoder_node.cpp  imu_node.cpp  ultra_s_node.cpp
src/sensors_pkg/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/sensors_pkg/src/log/: latest_build
thesis-src/: Makefile  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex
