<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensors_pkg</name>
  <version>0.0.0</version>
  <description>Sensors package</description>
  <maintainer email="xskole01@vutbr.cz">skulikk</maintainer>
  <license>Unlicense</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <build_depend>libgpiod-dev</build_depend>
  <exec_depend>libgpiod-dev</exec_depend>
  <build_export_depend>libgpiod-dev</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
